tests/ui/cfg/suggest-alternative-name-on-target.stderr
error: unexpected `cfg` condition value: `arm`
  --> $DIR/suggest-alternative-name-on-target.rs:5:7
   |
LL | #[cfg(target_abi = "arm")]
   |       ^^^^^^^^^^^^^^^^^^
   |
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
note: the lint level is defined here
  --> $DIR/suggest-alternative-name-on-target.rs:1:9
   |
LL | #![deny(unexpected_cfgs)]
   |         ^^^^^^^^^^^^^^^
help: `arm` is an expected value for `target_arch`
   |
LL - #[cfg(target_abi = "arm")]
LL + #[cfg(target_arch = "arm")]
   |

error: unexpected `cfg` condition value: `gnu`
  --> $DIR/suggest-alternative-name-on-target.rs:12:7
   |
LL | #[cfg(target_arch = "gnu")]
   |       ^^^^^^^^^^^^^^^^^^^
   |
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
help: `gnu` is an expected value for `target_env`
   |
LL - #[cfg(target_arch = "gnu")]
LL + #[cfg(target_env = "gnu")]
   |

error: unexpected `cfg` condition value: `openbsd`
  --> $DIR/suggest-alternative-name-on-target.rs:19:7
   |
LL | #[cfg(target_env = "openbsd")]
   |       ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
help: `openbsd` is an expected value for `target_os`
   |
LL - #[cfg(target_env = "openbsd")]
LL + #[cfg(target_os = "openbsd")]
   |

error: unexpected `cfg` condition value: `eabi`
  --> $DIR/suggest-alternative-name-on-target.rs:26:7
   |
LL | #[cfg(target_os = "eabi")]
   |       ^^^^^^^^^^^^^^^^^^
   |
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
help: `eabi` is an expected value for `target_abi`
   |
LL - #[cfg(target_os = "eabi")]
LL + #[cfg(target_abi = "eabi")]
   |

error: unexpected `cfg` condition value: `windows`
  --> $DIR/suggest-alternative-name-on-target.rs:32:7
   |
LL | #[cfg(target_abi = "windows")]
   |       ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
help: `windows` is an expected value for `target_family`
   |
LL - #[cfg(target_abi = "windows")]
LL + #[cfg(target_family = "windows")]
   |
help: `windows` is an expected value for `target_os`
   |
LL - #[cfg(target_abi = "windows")]
LL + #[cfg(target_os = "windows")]
   |

error: aborting due to 5 previous errors
